# telegram-mood-bot

./: .editorconfig  .gitignore  .mise.toml  Dockerfile  Makefile  OpenAPI.yaml  auth.py  bot.py  data.py  docker-compose.yaml  link.py  proxy.py  pyproject.toml  renovate.json  requirements.txt
.github/: actionlint.yaml
.github/workflows/: main.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: config-base.yaml  config-db.yaml  config-telegram.yaml  crons.yaml  secret-secrets.yaml  sts-update-handler.yaml  update-handler.yaml
migrations/: Dockerfile  flyway.toml
migrations/sql/: V1__Initial.sql
src/bot/: __main__.py  bot.py  config.py  database.py  database_pg.py  dynamo.py  init.py  meme.py  model.py
terraform/: .terraform.lock.hcl  api_gateway.tf  api_gateway_app_link.tf  api_gateway_auth.tf  api_gateway_auth_refresh.tf  api_gateway_auth_register.tf  api_gateway_auth_tg_id.tf  api_gateway_authorizer.tf  api_gateway_data.tf  api_gateway_data_get_user_info.tf  api_gateway_data_proxy.tf  api_gateway_tg_link.tf  bot.tf  bot_vars.tf  close_poll_trigger.tf  daily_trigger.tf  dynamodb.tf  dynamodb_keyvalue.tf  lambda_authorizer.tf  lambda_close_poll.tf  lambda_create_poll.tf  lambda_data.tf  lambda_data_get_user_info.tf  lambda_handle_app_link.tf  lambda_handle_refresh.tf  lambda_handle_register.tf  lambda_handle_tg_id.tf  lambda_handle_tg_link.tf  lambda_handle_update.tf  lambda_layer.tf  poll_trigger.tf  providers.tf  python.tf  tg_link_vars.tf
