[project]
requires-python = "==3.14.*"
name = "bot"
description = ""
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "asyncpg ==0.31.*",
    "bs-config [dotenv] ==4.0.0",
    "bs-nats-updater ==4.0.0",
    "httpx ==0.28.*",
    "python-telegram-bot ==22.6",
    "sentry-sdk >=2, <3",
]

[dependency-groups]
dev = [
    "mypy ==1.19.*",
    "pytest >=9, <10",
    "ruff ==0.14.14",
]

[[tool.uv.index]]
name = "internal"
url = "https://code.bjoernpetersen.net/api/packages/BjoernPetersen/pypi/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
